Imports, clone project repo, lib

--- a/Notebooks/[TFG]_Training_CNN.ipynb
+++ b/Notebooks/[TFG]_Training_CNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "[TFG] Training CNN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN8oO7Gq3wpgblmZovI23ei",
+      "authorship_tag": "ABX9TyPEUyCcgLt8XiHEH5gNV/nB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
       "source": [
         "## **Project repository download and Library installations**\n",
         "\n",
-        "**Prerequisites**"
+        "**Imports**"
       ]
     },
     {
@@ -72,9 +72,12 @@
         "id": "4RhSXzFAL21T"
       },
       "source": [
-        ""
+        "# Imports\n",
+        "import numpy as np\n",
+        "import librosa\n",
+        "import torch"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -83,20 +86,61 @@
         "id": "ZqsX4NSXL60Y"
       },
       "source": [
-        "**Project repository download and imports**"
+        "**Project repository download**"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "a_vyzP1cMBAh"
+        "id": "a_vyzP1cMBAh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "91bf3e96-af00-4788-dc33-d91e5e2ffb30"
       },
       "source": [
-        "!git clone https://github.com/andrezg98/MusicSourceSep.git\n",
+        "from getpass import getpass\n",
+        "\n",
+        "# IMPORTANTE: ¡Cambiar cuando publique el repositorio!\n",
+        "\n",
+        "user = 'andrezg98'\n",
+        "password = getpass('GitHub repo password')\n",
+        "u = user; p = password; \n",
+        "!git clone https://$u:$p@github.com/$u/MusicSourceSep.git\n",
         "%cd MusicSourceSep/lib\n",
-        "!ls"
+        "!ls\n",
+        "\n",
+        "del p, password"
       ],
-      "execution_count": null,
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "GitHub repo password··········\n",
+            "Cloning into 'MusicSourceSep'...\n",
+            "remote: Enumerating objects: 52, done.\u001b[K\n",
+            "remote: Counting objects: 100% (52/52), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (43/43), done.\u001b[K\n",
+            "remote: Total 52 (delta 11), reused 14 (delta 2), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (52/52), done.\n",
+            "/content/MusicSourceSep/lib\n",
+            "feature_computation.py\turmp_dataset.py\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nt4GHKryIUWY"
+      },
+      "source": [
+        "# Get data from URMP and Solos Datasets\n",
+        "import urmp_dataset"
+      ],
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -186,9 +230,9 @@
         "id": "-rkaiIoKKFuK"
       },
       "source": [
-        ""
+        "import feature_computation"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
